# bazel_java_template

./: .gitignore  README.md  WORKSPACE
.github/workflows/: main.yml
src/main/api/: BUILD.bazel  model.proto  service.proto
src/main/java/: BUILD.bazel
src/main/java/example/model/: Model.java
src/main/java/example/service/: IdService.java
src/test/java/example/client/: BUILD.bazel  Client.java
src/test/java/example/service/: BUILD.bazel  ClientTest.java  IdServiceTest.java
